# glider_profiles

./: LICENSE  MANIFEST  README.md  dbd2asc.py  northsea_pumped_filteredTC.asc  output.asc  pyproject.toml  readthedocs.yml  setup.py
ctd/: profile_lag.py  sensor_lag.py  short_time_mismatch_results.ndf  short_time_mismatch_results_2013.ndf
docs/: make_sphinx_apidoc.sh
docs/source/: conf.py  even.py  example.rst  index.rst  introduction.rst  profiles.rst
example/: griddata_example.py  profile_split_example.py  profile_split_example_new.py  thermallag_correction.py
obsolete/: dataconverters.py  filter_coefs.mc  freeflush_thermallag.py  griddata.py  profiles_obsolete.py  sediment_profiles.py  sediment_profiles.py~  signal_processing.py  thermallag_correction.py  thermocline.py  thermocline_detection.py
obsolete/ctd/: esitmate_lags.py  inspect.py
profiles/: __init__.py  ctd.py  filters.py  griddata.py  iterprofiles.py  profiles.py  thermocline.py
src/glider_profiles/: __init__.py  ctd.py  filters.py  profiles.py  test_ctd.py
tests/: test_gain_delay.py  test_profiles.py  test_profiles.py~
tests/test_profile_removal/: test_profiles.py
